--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ volumes:
 
 services:
   elasticsearch:
+    container_name: elasticsearch
     image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
     environment:
       - discovery.type=single-node
@@ -20,25 +21,27 @@ services:
         soft: -1
         hard: -1
     volumes:
-        - esdata:/usr/share/elasticsearch/data
+        - elasticsearch-data:/usr/share/elasticsearch/data
     ports:
         - '9200:9200'
 
   kibana:
+    container_name: kibana
     image: docker.elastic.co/kibana/kibana:7.9.2
     environment:
-        ELASTICSEARCH_URL: "http://localhost:9200"
+        ELASTICSEARCH_URL: "http://elasticsearch:9200"
     ports:
       - "5601:5601"
     depends_on:
       - elasticsearch
 
-  logstash:
-    image: docker.elastic.co/logstash/logstash:7.9.2
-    ports:
-      - "5000:5000"
-    volumes:
-      - type: bind
-        source: ./logstash_pipeline/
-        target: /usr/share/logstash/pipeline
-        read_only: true
+  # logstash:
+  #   container_name: logstash
+  #   image: docker.elastic.co/logstash/logstash:7.9.2
+  #   ports:
+  #     - "5000:5000"
+  #   volumes:
+  #     - type: bind
+  #       source: ./logstash_pipeline/
+  #       target: /usr/share/logstash/pipeline
+  #       read_only: true
